--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.17.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
     "gsap": "^1.20.4",
@@ -42,6 +43,7 @@
     "parcel-plugin-pug": "^0.2.5",
     "postcss-modules": "^1.1.0",
     "prettier": "1.10.2",
+    "prettier-eslint": "^8.8.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
